# micro-shop

./: .gitignore  alembic.ini  items_views.py  main.py  pyproject.toml  shop.db
alembic/: env.py
alembic/versions/: 2025_11_10_1349-fa784c694f3b_create_products_table.py  2025_11_10_1843-762b8f8b27fe_create_users_table.py  2025_11_11_1617-368df87790b4_create_posts_table.py  2025_12_03_0726-03ccb55281cb_drop_profiles_table_if_exists.py  2025_12_03_0729-8dd417fad420_create_profile_table.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/db_models/: __init__.py  db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
users/: crud.py
